@@ -78,6 +78,7 @@ AC_SUBST(MWLIBS)
 AC_SUBST(MRNETCOMMNODEBIN)
 AC_SUBST(DOTBINDIR)
 AC_SUBST(LAUNCHMONBIN)
+AC_SUBST(LAUNCHMONPREFIX)
 AC_SUBST(STATPYTHON)
 
 AC_CONFIG_FILES([Makefile
