@@ -9,6 +9,9 @@ fi
 if test -z $STAT_MRNET_COMM_PATH; then
     export STAT_MRNET_COMM_PATH=@MRNETCOMMNODEBIN@
 fi
+if test -z $STAT_LMON_PREFIX; then
+    export STAT_LMON_PREFIX=@LAUNCHMONPREFIX@
+fi
 if test -z $STAT_LMON_LAUNCHMON_ENGINE_PATH; then
     export STAT_LMON_LAUNCHMON_ENGINE_PATH=@LAUNCHMONBIN@
 fi
